--- a/src/App.scss
+++ b/src/App.scss
@@ -209,7 +209,7 @@ $white :rgb(255,
 
 .container-celebrate {
     position: relative;
-    height: 855px;
+    min-height: 300px;
     @media only screen and(max-width: 767px) {
         height: 160vh;
     }
@@ -218,7 +218,7 @@ $white :rgb(255,
         height: 430px;
         margin-top: 0;
         margin-bottom: 0;
-        position: relative;
+        position: absolute;
         // overflow: hidden;
         background-repeat: no-repeat;
         background-attachment: fixed;
@@ -227,6 +227,7 @@ $white :rgb(255,
             padding: 120px 120px 140px 120px;
             width: 100%;
             height: 100%;
+            position: relative;
             background-color: #211506b2;
             @media only screen and(max-width: 767px) {
                 padding: 25px 30px;
@@ -238,7 +239,6 @@ $white :rgb(255,
                     }
                 }
             }
-            position: relative;
             .content {
                 color: #fff;
                 display: flex;
@@ -255,14 +255,15 @@ $white :rgb(255,
                 }
             }
         }
-        .content-celebrate {
-            position: absolute;
-            z-index: 15;
-            top: 330px;
-            width: 100%;
-            @media only screen and(max-width: 767px) {
-                top: 290px;
-            }
+    }
+    .content-celebrate {
+        position: relative;
+        z-index: 15;
+        top: 330px;
+        // padding-top: 350px;
+        width: 100%;
+        @media only screen and(max-width: 767px) {
+            top: 290px;
         }
     }
 }
@@ -392,6 +393,27 @@ $white :rgb(255,
     }
 }
 
+.sticky {
+    position: absolute;
+}
+
+.position-bottom {
+    bottom: 0 !important;
+}
+
+.modal-dialog-scrollable {
+     ::-webkit-scrollbar-track {
+        background-color: rgb(255, 255, 255);
+    }
+     ::-webkit-scrollbar {
+        width: 7px;
+        background-color: rgb(105, 105, 105);
+    }
+     ::-webkit-scrollbar-thumb {
+        background-color: rgb(105, 105, 105);
+    }
+}
+
 ::-webkit-scrollbar-track {
     background-color: rgb(63, 52, 54);
 }
@@ -424,6 +446,24 @@ $white :rgb(255,
 }
 
 @for $i from 1 through 100 {
+    .bottom-#{$i} {
+        bottom: calc(1px * #{$i});
+    }
+    .w-#{$i} {
+        width: calc(1% * #{$i}) !important;
+    }
+    .ml-0-#{$i} {
+        margin-left: calc(0.6rem * #{$i});
+    }
+    .mr-0-#{$i} {
+        margin-right: calc(0.6rem * #{$i});
+    }
+    .mt-0-#{$i} {
+        margin-top: calc(0.6rem * #{$i});
+    }
+    .mb-0-#{$i} {
+        margin-bottom: calc(0.6rem * #{$i});
+    }
     .ml-#{$i} {
         margin-left: calc(1rem * #{$i});
     }
@@ -447,6 +487,18 @@ $white :rgb(255,
     }
     .pr-#{$i} {
         padding-right: calc(1rem * #{$i});
+    }
+    .pt-0-#{$i} {
+        padding-top: calc(0.1rem * #{$i});
+    }
+    .pb-0-#{$i} {
+        padding-bottom: calc(0.1rem * #{$i});
+    }
+    .pl-0-#{$i} {
+        padding-left: calc(0.1rem * #{$i});
+    }
+    .pr-0-#{$i} {
+        padding-right: calc(0.1rem * #{$i});
     }
     .font-#{$i} {
         font-size: calc(1rem * #{$i}) !important;
