--- a/src/scss/card.scss
+++ b/src/scss/card.scss
@@ -71,7 +71,7 @@
                 }
                 &:hover {
                     cursor: pointer;
-                    opacity: 0.8;
+                    // opacity: 0.8;
                 }
             }
             i {
