--- a/src/scss/other.scss
+++ b/src/scss/other.scss
@@ -43,6 +43,127 @@
     border-radius: 1em;
 }
 
+.btn-add-ak {
+    background-color: rgba(119, 118, 118, 0.342);
+    border-radius: 2px;
+    box-shadow: 1px 1px 0 rgb(5 5 5 / 20%), 1px 1px 0 rgb(43 43 43 / 20%) inset;
+    padding: 7px;
+    position: relative;
+    text-align: center;
+    height: auto;
+    width: 100%;
+    cursor: pointer;
+    color: #ddd;
+    box-sizing: border-box;
+    text-shadow: -1px -1px 0 rgb(0 0 0 / 20%);
+    border: none;
+    opacity: .85;
+    font-size: 0.85rem;
+    filter: alpha(opacity=85);
+    -moz-user-select: none;
+    -khtml-user-select: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
+    -o-user-select: none;
+    user-select: none;
+    transition: .4s ease-out;
+    &:hover {
+        opacity: 1;
+    }
+    i {
+        margin-right: 10px;
+    }
+}
+
+.cst-switch {
+    display: flex;
+    align-items: center;
+    -webkit-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    input[type="checkbox"] {
+        -webkit-appearance: none;
+        -moz-appearance: none;
+        appearance: none;
+        -webkit-tap-highlight-color: transparent;
+        cursor: pointer;
+        height: 16px;
+        width: 32px;
+        border-radius: 10px;
+        display: inline-block;
+        position: relative;
+        margin: 0;
+        border: 2px solid #ffffffbe;
+        transition: all .2s ease;
+        &:after {
+            content: '';
+            position: absolute;
+            top: 2px;
+            left: 2px;
+            width: 7.5px;
+            height: 7.5px;
+            border-radius: 50%;
+            background: white;
+            box-shadow: 0 1px 2px rgba(44, 44, 44, .2);
+            transition: all .2s cubic-bezier(.5, .1, .75, 1.35);
+        }
+        &:checked {
+            background: #555458;
+            &::after {
+                transform: translatex(15px);
+            }
+        }
+    }
+    .cst-label {
+        margin-left: 10px;
+        font-weight: 600;
+    }
+}
+
+.cst-radio {
+    label {
+        padding: 2px 6px;
+        border-radius: 50px;
+        display: inline-flex;
+        cursor: pointer;
+        transition: background .2s ease;
+        margin: 4px 0;
+        -webkit-tap-highlight-color: transparent;
+        &:hover,
+         :focus-within {
+            background: rgba(#9F9F9F, .1)
+        }
+        input[type="radio"] {
+            vertical-align: middle;
+            width: 17px;
+            height: 17px;
+            border-radius: 10px;
+            background: none;
+            border: 0;
+            box-shadow: inset 0 0 0 1px #9F9F9F;
+            box-shadow: inset 0 0 0 1.5px #9F9F9F;
+            appearance: none;
+            padding: 0;
+            margin: 0;
+            transition: box-shadow 150ms cubic-bezier(.95, .15, .5, 1.25);
+            pointer-events: none;
+            &:focus {
+                outline: none;
+            }
+            &:checked {
+                box-shadow: inset 0 0 0 6px #fdfdfd;
+            }
+        }
+        span {
+            vertical-align: middle;
+            display: inline-block;
+            line-height: 20px;
+            padding: 0 8px;
+            color: #fff !important;
+        }
+    }
+}
+
 .selected-items {
     width: 100%;
     max-height: 260px;
@@ -87,6 +208,328 @@
                 }
             }
         }
+    }
+}
+
+.text-blue {
+    color: #008cff !important;
+    transition: .4s ease-out;
+    &:hover {
+        text-decoration: underline;
+        cursor: pointer;
+    }
+}
+
+.file-gallery {
+    padding: 0 !important;
+    display: flex;
+    flex-wrap: nowrap;
+    color: transparent !important;
+    height: 38px;
+    &::-webkit-file-upload-button {
+        visibility: hidden;
+    }
+    &::before {
+        content: 'Select some files';
+        display: flex;
+        justify-content: center;
+        color: #fff !important;
+        padding: 9px 15px;
+        white-space: nowrap;
+        cursor: pointer;
+        font-weight: 400;
+        font-size: 10pt;
+        width: 100%;
+        transition: .4s ease-out;
+    }
+    &:hover::before {
+        background: rgba(255, 255, 255, 0.12);
+    }
+}
+
+.container-ucapan-edit {
+    width: 100%;
+    display: flex;
+    padding: 0 5px;
+    flex-direction: column;
+    .items-ucapan {
+        width: 100%;
+        margin: 5px 0;
+        border-radius: 10px;
+        background: rgba(255, 255, 255, 0.12);
+        padding: 10px;
+        .top {
+            display: flex;
+            flex-direction: column;
+            margin-bottom: 6px;
+            .items {
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+                label {
+                    font-size: 0.95rem;
+                }
+                span {
+                    opacity: 0.8;
+                    font-size: 0.70rem;
+                }
+            }
+            .stat {
+                font-size: 0.75rem;
+                font-weight: 500;
+            }
+        }
+    }
+}
+
+.progress {
+    width: 100%;
+    height: 6px;
+    background: #e1e4e8;
+    border-radius: 3px;
+    overflow: hidden;
+    .progress-bar {
+        display: block;
+        height: 100%;
+        background: linear-gradient(90deg, #ffd33d, #ea4aaa 17%, #b34bff 34%, #01feff 51%, #ffd33d 68%, #ea4aaa 85%, #b34bff);
+        background-size: 300% 100%;
+        animation: progress-animation 2s linear infinite;
+    }
+}
+
+.gallery-wedding-container {
+    width: 100%;
+    height: 100%;
+    padding: 8px 5px;
+    column-count: 2;
+    column-gap: 5.5px;
+    .gallery-items {
+        width: 100%;
+        height: 100%;
+        position: relative;
+        transition: .4s ease-out;
+        margin-bottom: 5.5px;
+        img {
+            width: 100%;
+        }
+        &:hover {
+            cursor: pointer;
+            .overflow-gallery {
+                display: flex;
+            }
+        }
+        .overflow-gallery {
+            display: none;
+            width: 100%;
+            height: 100%;
+            position: absolute;
+            background: rgba(0, 0, 0, 0.8);
+            top: 0;
+            align-items: center;
+            justify-content: center;
+            transition: .4s ease-out;
+            .trash {
+                font-size: 1.3em;
+                transition: .4s ease-out;
+                padding: 15px;
+                &:hover {
+                    // cursor: pointer;
+                    transform: scale(1.3);
+                }
+            }
+        }
+    }
+}
+
+.img-separator-container {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    padding: 7px 10px;
+    font-size: 0.75rem;
+    .btn-set-default {
+        width: 100%;
+        padding: 12px 20px;
+        display: flex;
+        flex-direction: row;
+        align-content: center;
+        align-items: center;
+        text-align: center;
+        background: #3c3133;
+        transition: .4s ease-out;
+        &:hover {
+            cursor: pointer;
+            background: rgba(255, 255, 255, 0.12);
+        }
+        i {
+            margin-right: 5px;
+            margin-top: 2px;
+        }
+    }
+    // overflow: auto;
+    // height: 350px;
+    .img-separator-content {
+        height: 90%;
+        padding: 20px 10px 0 12px;
+        // display: flex;
+        // flex-wrap: wrap;
+        display: grid;
+        grid-gap: 10px;
+        justify-items: center;
+        grid-template-columns: repeat(auto-fill, minmax(80px, 0.5fr));
+        .items-separator {
+            transition: .4s ease-out;
+            // background: rgba(255, 255, 255, 0.12);
+            width: 100%;
+            margin: 10px;
+            &:hover {
+                cursor: pointer;
+                background: rgba(255, 255, 255, 0.12);
+            }
+            img {
+                object-fit: cover;
+                width: 100%;
+            }
+        }
+    }
+}
+
+.container-audio {
+    width: 98%;
+    audio {
+        height: 37px;
+        width: 100%;
+        margin-top: 10px;
+        margin-bottom: 10px;
+    }
+}
+
+.container-timeline-edit {
+    width: 100%;
+    position: relative;
+    .items-timeline {
+        .proggress-container {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            top: 0;
+            left: 0;
+            background: rgba(0, 0, 0, 0.466);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            .lds-dual-ring {
+                width: 40px;
+                height: 40px;
+                &::after {
+                    width: 35px;
+                    height: 35px;
+                }
+            }
+        }
+        background: #444242;
+        padding: 10px;
+        width: 100%;
+        position: relative;
+        display: flex;
+        overflow: hidden;
+        flex-direction: column;
+        img {
+            width: 100%;
+            height: 150px;
+            object-fit: cover;
+        }
+        .title {
+            font-size: 18px;
+            font-size: 18px;
+            margin-top: 12px;
+            text-overflow: ellipsis;
+        }
+        .sub-title {
+            font-size: 14.5px;
+            margin-top: 6px;
+        }
+        .description {
+            width: 97%;
+            margin-top: 10px;
+            span {
+                opacity: 0.8;
+                text-decoration: underline;
+            }
+        }
+        .button-timeline-block {
+            margin-top: 7px;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            .button-- {
+                width: 90%;
+                padding: 10px 0;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                transition: 0.4s ease-out;
+                position: relative;
+                i {
+                    margin-right: 5px;
+                }
+                &:hover {
+                    background: #251f20;
+                    color: #fff;
+                    cursor: pointer;
+                }
+            }
+        }
+    }
+}
+
+.lds-dual-ring {
+    display: inline-block;
+    width: 15px;
+    height: 15px;
+    position: relative;
+    margin-left: 4px;
+}
+
+.lds-dual-ring:after {
+    content: " ";
+    display: block;
+    width: 14px;
+    height: 15px;
+    margin: 2px;
+    border-radius: 50%;
+    border: 2px solid #fff;
+    border-color: #fff transparent #fff transparent;
+    animation: lds-dual-ring 1.2s linear infinite;
+}
+
+@keyframes lds-dual-ring {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+.add-timeline {
+    margin-top: 15px;
+    width: 99%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    background: #695d5f;
+    color: rgba(255, 255, 255, 0.808);
+    transition: 0.4s ease-out;
+    padding: 12px 0;
+    border-radius: 5px;
+    font-size: 0.85rem;
+    position: relative;
+    &:hover {
+        background: #251f20;
+        color: #fff;
+        cursor: pointer;
     }
 }
 
